--- a/posts/1.3.llm_archs.md
+++ b/posts/1.3.llm_archs.md
@@ -911,3 +911,12 @@ prompt-lookup decoding：[https://github.com/apoorvumang/prompt-lookup-decoding]
 ## profile-data
 
 [https://github.com/deepseek-ai/profile-data](https://github.com/deepseek-ai/profile-data)
+
+## 3fs
+
+[DeepSeek开源周最后一天：让数据处理「从自行车升级到高铁](https://mp.weixin.qq.com/s/p8KGnYIqmCkXPF4jjRiKjQ)
+
+[https://github.com/deepseek-ai/3FS](https://github.com/deepseek-ai/3FS)
+
+[https://github.com/deepseek-ai/smallpond](https://github.com/deepseek-ai/smallpond)
+
