--- a/posts/1.3.llm_archs.md
+++ b/posts/1.3.llm_archs.md
@@ -674,6 +674,9 @@ As an example, for the 13B parameter OPT model, the KV cache of a single token d
 
 [我与vLLM的2024：清华大佬的vLLM开发之路](https://mp.weixin.qq.com/s/9WW4894LBIq72ormhlMJmA)
 
+
+分布式infer：[YaRN: Efficient Context Window Extension of Large Language Models](https://arxiv.org/pdf/2309.00071)，Qwen用到了：[https://qwen.readthedocs.io/en/latest/deployment/vllm.html#multi-gpu-distributed-serving](https://qwen.readthedocs.io/en/latest/deployment/vllm.html#multi-gpu-distributed-serving)
+
 ## 并行推理方法
 
 [Efficiently scaling transformer inference](https://arxiv.org/pdf/2211.05102.pdf)
