--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -1150,6 +1150,20 @@ colossalai run --hostfile path-to-host-file --nprocpernode 8 \
 
 [https://chat.qwen.ai](https://chat.qwen.ai)
 
+## QWQ-32B
+
+[https://qwenlm.github.io/blog/qwq-32b/](https://qwenlm.github.io/blog/qwq-32b/)
+
+[https://huggingface.co/Qwen/QwQ-32B](https://huggingface.co/Qwen/QwQ-32B)
+
+目前只有博客，写得挺简单的，看介绍是用了两阶段RL：
+
++ 1阶段RL：在冷启ckpt上，只拿代码和数学语料，基于outcome-base reward，随着训练的进行，发现这两方面的能力都有持续提升
+  + 数学：有一个accuracy verifier，检查最终解决方案是否正确
+  + 代码：有一个代码执行server，检查代码是否通过预定义好的测试用例
++ 2阶段RL：没说用什么语料，但用的是general reward model加上rule-based verifiers产生的reward，发现只要少量的step就能提升模型的通用能力，如指令遵循、人类偏好对齐、agent性能，而且代码和数学能力下降不明显
+
+
 # Claude
 
 ## Claude 3.7 Sonnet
