--- a/posts/1.3.llm_archs.md
+++ b/posts/1.3.llm_archs.md
@@ -679,7 +679,7 @@ As an example, for the 13B parameter OPT model, the KV cache of a single token d
 
 使用技巧：
 
-参考[https://docs.vllm.ai/en/latest/features/compatibility_matrix.html](https://docs.vllm.ai/en/latest/features/compatibility_matrix.html)看所有特性的兼容性
+参考[https://docs.vllm.ai/en/latest/features/compatibility_matrix.html](https://docs.vllm.ai/en/latest/features/compatibility_matrix.html)看所有特性的兼容性，还有[https://docs.vllm.ai/en/latest/performance/optimization.html](https://docs.vllm.ai/en/latest/performance/optimization.html)
 
 + cudagraph一般来讲会比eager快，所以不要加```--enforce-eager```
 + ```--enable-prefix-caching```这个开起来
@@ -688,7 +688,173 @@ As an example, for the 13B parameter OPT model, the KV cache of a single token d
 + ```--max-num-seqs```可以设置一下，最好和实际的请求落到这个server实例的qps近似，需要实测
 + ```--swap-space```其实没啥用，只有一个prompt生成多个response的时候有用，即```best_of > 1```（参考github issue：[https://github.com/vllm-project/vllm/issues/2853](https://github.com/vllm-project/vllm/issues/2853)），也就是说根本不会用到cpu的kvcache
 + 投机采样说实话比较鸡肋，特别是对于qwen系列模型来讲，因为不同大小的qwen的词表是不一样大的，所以其实用不了，而如果用最简单的ngram，速度又非常慢
++ 请求里的```presence_penalty```设置一下，不然qwen容易出现死循环输出从而打爆tokens
 
+示例：
+
+```python
+import subprocess
+import time
+import requests
+import json
+import socket
+from concurrent.futures import ThreadPoolExecutor, as_completed
+
+import openai
+
+
+# 检查端口是否可用
+def is_port_open(host, port, timeout=5):
+    """
+    检查指定端口是否可用
+    :param host: 主机地址
+    :param port: 端口号
+    :param timeout: 超时时间（秒）
+    :return: True 如果端口可用，否则 False
+    """
+    try:
+        with socket.create_connection((host, port), timeout=timeout):
+            return True
+    except (socket.timeout, ConnectionRefusedError):
+        return False
+
+# 启动 vLLM 服务
+def start_vllm_service():
+#        "CUDA_VISIBLE_DEVICES=0 VLLM_WORKER_MULTIPROC_METHOD=spawn \
+    port = 12345
+    import os
+    import tempfile
+
+    # 创建临时目录并设置权限
+    temp_dir = tempfile.mkdtemp()
+    os.chmod(temp_dir, 0o755)
+    
+    # 设置环境变量
+    env = os.environ.copy()
+    env.update({
+        "VLLM_WORKER_MULTIPROC_METHOD": "spawn",
+        #"CUDA_VISIBLE_DEVICES": "0",
+        "TMPDIR": temp_dir,
+        "TEMP": temp_dir,
+        "TMP": temp_dir
+    })
+    cur_port = port    
+    tp_size = 1
+    process = subprocess.Popen(
+        ["python3", "-m", "vllm.entrypoints.openai.api_server",
+                "--host", "0.0.0.0",
+                "--port", str(cur_port),
+                "--max-model-len", "2000",
+                "--max-num-batched-tokens", "1024",
+                "--max-num-seqs", "64",
+                "--trust-remote-code",
+                "--enable-reasoning",
+                "--enable-prefix-caching",
+                "--enable-chunked-prefill",
+#                "--swap-space", "16",
+#                "--speculative_model", "./DeepSeek-R1-Distill-Qwen-7B",
+#                "--num_speculative_tokens","5",
+#                "--speculative_draft_tensor_parallel_size", "1",
+#                "--speculative_model", "[ngram]",
+#                "--num_speculative_tokens", "5",
+#                "--ngram_prompt_lookup_max", "4",
+#                "--enforce-eager",
+                "--reasoning-parser", "deepseek_r1",
+                "--tensor-parallel-size", str(tp_size),
+                "--served-model-name", "deepseek-reasoner",
+        "--model", "./DeepSeek-R1-Distill-Qwen-32B-AWQ"
+    ],
+        #shell=True,
+        env=env,
+        stdout=open("./out.log", "w"),
+        stderr=open("./err.log", "w")
+    )
+    #--max-num-batched-tokens 65536 
+    #    --gpu-memory-utilization 0.97 \
+    #    --uvicorn-log-level warning \
+    return process
+
+# 发送请求的函数
+def send_request(client, model, prompt):
+    """
+    向 vLLM 服务发送请求
+    :param prompt: 用户输入的提示
+    :return: 模型生成的响应
+    """
+    try:
+        messages = [{"role": "user", "content": prompt}]
+        completion = client.chat.completions.create(
+            model=model,
+            messages=messages,
+            temperature=0.3,
+            presence_penalty=1.2,
+#            top_p=0.1
+            #   max_tokens=8
+        )
+        print(completion.choices[0])
+        content = completion.choices[0].message.content
+        reasoning_content = completion.choices[0].message.reasoning_content
+        print(content)
+        #print("reasoning:")
+        #print(reasoning_content)
+        return content
+    except Exception as e:
+        return {"error": str(e)}
+
+# 主函数
+def main():
+    """
+    主函数：启动服务、发送并发请求、处理结果
+    """
+    # 启动 vLLM 服务
+    print("Starting vLLM service...")
+    vllm_process = start_vllm_service()
+
+    # 检查端口是否可用
+    host = "localhost"
+    port =12345 
+    print(f"Waiting for service to start on {host}:{port}...")
+    while not is_port_open(host, port):
+        print("Service not ready yet, waiting...")
+        time.sleep(2)  # 每 2 秒检查一次
+    print("Service is ready!")
+
+    all_p = []
+    with open("./prompts", 'r') as fin:
+        for line in fin:
+            prompt = line.strip("\n")
+            all_p.append(prompt)
+
+    prompts = all_p[:68]
+
+    client = openai.OpenAI(
+        base_url=f"http://{host}:{port}/v1", # "http://<Your api-server IP>:port"
+        api_key = "sk-no-key-required"
+    )
+
+    models = client.models.list()
+    model = models.data[0].id
+
+    # 使用 ThreadPoolExecutor 创建线程池并发发送请求
+    print("Sending requests concurrently...")
+    start = time.time()
+    with ThreadPoolExecutor(max_workers=60) as executor:  # 最大线程数为 
+        # 提交任务到线程池
+        futures = [executor.submit(send_request, client, model, prompt) for prompt in prompts]
+        # 获取任务结果
+        for future in as_completed(futures):
+            try:
+                result = future.result()
+                print("Response:", result)
+            except Exception as e:
+                print(f"Request failed: {e}")
+    end = time.time()
+    cost = end - start
+    print(cost)
+    # 关闭 vLLM 服务
+    print("Stopping vLLM service...")
+    vllm_process.terminate()
+```
 
 ## 并行推理方法
 
