--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1981,8 +1981,8 @@ meta发的[LLM-Rec: Personalized Recommendation via Prompting Large Language Mod
 + ExFM：
     + t-1的各VM数据聚合成t-1的FM数据，训练得到t-2的FM模型
     + t的各VM数据聚合成的t的FM数据，训练得到t-1的FM模型
-    + DAS, data augmentation service：FM对每个VM数据进行预估，再加上对应的VM数据
-    + Auxiliary Head和Student Adapter：t-1的VM模型和t的VM模型
+    + DAS, data augmentation service：FM对每个VM数据进行预估，再加上对应的VM数据，产出VM的训练数据
+    + Auxiliary Head和Student Adapter：使用DAS产出的数据，基于t-1的VM模型利用AH和SA训练得到t的VM模型
 
 ![](../assets/das.png)
 
@@ -2037,8 +2037,6 @@ $$
 按自己的理解重新画了下：
 
 ![](../assets/sa-my-pic.png)
-
-新的Transfer Scaling Law：当不断迭代和提升基础大模型的模型规模时，其高效的知识转化率使得线上的广告排序模型的性能呈现出连续数年的持续提升，且增速在不断扩大。
 
 
 ## SLMRec
