--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -880,8 +880,8 @@ $$
 item有各种特征，如title、img、id等
 
 + 左边：异构信息分解（HTFL）把1-T个item的各种特征（每个特征当成一个token）flatten成一个长序列，然后过一个causal transformer得到token粒度的输出list，再过一个item粒度的causal transformer得到item粒度的输出list
-+ 右边：2~T+1个item，每一种特征把2~T+1拼到一起过各自的tower，每个tower得到的感觉还是2~T+1个输出，这个输出和左边的token粒度的输出List算个LMP，然后过一个item cross tower，我猜输出的是2~T+1个item表示，和左边的item粒度输出List再算一个LMP
-+ LMP：左边是1~T，右边是2~T+1，t1过个mlp预测t3，t1过另一个MLP预测t2，即multi-step预估
++ 右边：$$2~T+1$$个item，每一种特征把$$2~T+1$$拼到一起过各自的tower，每个tower得到的感觉还是$$2~T+1$$个输出，这个输出和左边的token粒度的输出List算个LMP，然后过一个item cross tower，我猜输出的是2~T+1个item表示，和左边的item粒度输出List再算一个LMP
++ LMP：左边是$$1~T$$，右边是$$2~T+1$$，t1过个mlp预测t3，t1过另一个MLP预测t2，即multi-step预估
 
 ![](../assets/HeteroRec.png)
 
