--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1835,8 +1835,6 @@ of user-interest topics.
     + 基于prompt5和prompt7通过UCB选出一个最优的prompt8
 + PromptSel：在3个domain上进行上述迭代，分别得到对应domain的最优prompt，也看了下这3个prompt在其他数据集上的表现，最终选出一个泛化性比较好的
 
-
-
 ## Transrec（学术界）KDD24
 
 [Bridging Items and Language: A Transition Paradigm for Large Language Model-Based Recommendation](https://arxiv.org/pdf/2310.06491) KDD24
@@ -1884,6 +1882,25 @@ if args.target == "attribute":
 
 + FM-index：参考[Autoregressive Search Engines: Generating Substrings as Document Identifiers](https://arxiv.org/pdf/2204.10628)：例如一个item可以写成```<IDS> 1023 <IDE> Urban Decay Eyeshadow Palette Naked Heat <AS> Makeup <AE> <AS> Eyes <AE>```，并通过wavelet tree存储，给定开始token（如```<IDS>```或者```<AS>```），可以在$$O(Vlog(V))$$里找出所有可能的后续tokens。代码：[https://github.com/facebookresearch/SEAL](https://github.com/facebookresearch/SEAL)
 + constrained beam search：参考[Autoregressive entity retrieval](https://arxiv.org/pdf/2010.00904)：代码：[https://github.com/facebookresearch/GENRE](https://github.com/facebookresearch/GENRE)，另外，可以发现title是没有bos和eos的，这样在检索/生成title的时候，是可以检索/生成子串的，也就是论文提到的position-free，同样的方法也可以用在instruct tuning阶段。
+
+## E4SRec（学术界）WWW24
+
+[E4SRec: An Elegant Effective Efficient Extensible Solution of Large Language Models for Sequential Recommendation](https://arxiv.org/pdf/2312.02443)
+
+代码：[https://github.com/HestiaSky/E4SRec/](https://github.com/HestiaSky/E4SRec/)
+
+![](../assets/e4srec.png)
+
++ 把id引进来：先通过现有的推荐模型（如SASRec）得到id embed，然后通过一个linear得到和原始LLM的emb一样长的dim，再嵌入到llm里去，只有这个linear是可学习的
++ LLM的输出：看代码取的是最后一个词的hidden state，过一个softmax映射到id空间（当然，如果要用到工业界可以正常的召回采样方法，如sampled softmax之类的）
++ infer：和召回一样，ann
+
+finetune部分代码的大概逻辑如下：
+
++ 输入：把预训练好的item id emb当成一个nn.Embedding搞到模型里去，然后样本里的item id（每个id都是1-n的数）去查出对应的emb，和instruct的emb、response的emb(“### Response：\n”这种文字对应的emb)这3个emb一起concat起来作为模型输入
++ label：假设有n个item，因为最后过了个softmax映射到n，所以label就是一个1-n之间的数
+
+infer照理说应该是得到emb，然后去ann，但代码里偷懒了直接拿softmax后的1-n的结果
 
 ## 其他
 
@@ -2046,9 +2063,11 @@ $$
 
 [ICLR2025 | SLMRec: 重新思考大语言模型在推荐系统中的价值](https://mp.weixin.qq.com/s/E6SGGKy6-D1h3zGro7KW0w)
 
+基线是
+
 [SLMRec: Distilling Large Language Models into Small for Sequential Recommendation](https://openreview.net/pdf?id=G4wARwjF8M)
 
-探究了大模型架构在序列推荐中参数量与效果的关系，并提出了一种知识蒸馏的方法，使得小语言模型仅用13%的模型参数，取得了比现有大模型推荐方法略好的效果，并取得了在训练/推理阶段6.6x/8.0x的加速。
+提出了一种知识蒸馏的方法，使得小语言模型仅用13%的模型参数，取得了比现有大模型推荐方法略好的效果，并取得了在训练/推理阶段6.6x/8.0x的加速。
 
 [https://github.com/WujiangXu/SLMRec](https://github.com/WujiangXu/SLMRec)
 
