--- a/posts/1.1.pre_llm.md
+++ b/posts/1.1.pre_llm.md
@@ -727,52 +727,46 @@ RTD比MLM**更sample-efficient**，因为RTD只做二分类，而MLM需要做全
 
 [https://sbert.net/examples/training/matryoshka/README.html](https://sbert.net/examples/training/matryoshka/README.html)
 
-训练时：
+训练+预测
 
 ```python
-from sentence_transformers import SentenceTransformer
-from sentence_transformers.losses import CoSENTLoss, MatryoshkaLoss
+model_name = "./bge-large-zh-v1.5" 
+out_model_name = "./new-bge-large-zh-v1.5"
+model = SentenceTransformer(model_name)
 
-model = SentenceTransformer("microsoft/mpnet-base")
 
-base_loss = CoSENTLoss(model=model)
-loss = MatryoshkaLoss(
+sentences = ["这是一个测试句子", "这是另一个例子"]
+embeddings = model.encode(sentences)
+print(f"嵌入维度：{embeddings.shape}")
+
+train_dataset = Dataset.from_dict({
+    "anchor": ["It's nice weather outside today.", "He drove to work."],
+    "positive": ["It's so sunny.", "He took the car to the office."],
+})
+loss = losses.MultipleNegativesRankingLoss(model)
+loss = losses.MatryoshkaLoss(model, loss, [768, 512, 256, 128, 64])
+
+trainer = SentenceTransformerTrainer(
     model=model,
-    loss=base_loss,
-    matryoshka_dims=[768, 512, 256, 128, 64],
-    matryoshka_weight=[1, 1, 1, 1, 1],
+    train_dataset=train_dataset,
+    loss=loss,
 )
+trainer.train()
+trainer.save_model(out_model_name)
 
-model.fit(
-    train_objectives=[(train_dataset, loss)],
-    ...,
-)
-```
-
-预测时
-
-```python
-from sentence_transformers import SentenceTransformer
-from sentence_transformers.util import cos_sim
-
-model = SentenceTransformer("tomaarsen/mpnet-base-nli-matryoshka")
+model = SentenceTransformer(out_model_name)
 
 matryoshka_dim = 64
 embeddings = model.encode(
-    [
-        "The weather is so nice!",
-        "It's so sunny outside!",
-        "He drove to the stadium.",
-    ]
-)
+            [
+                "The weather is so nice!",
+                "It's so sunny outside!",
+                "He drove to the stadium.",
+                ]
+            )
 embeddings = embeddings[..., :matryoshka_dim] # Shrink the embedding dimensions
 print(embeddings.shape)
-# => (3, 64)
 
-# Similarity of the first sentence to the other two:
-similarities = cos_sim(embeddings[0], embeddings[1:])
-print(similarities)
-# => tensor([[0.8910, 0.1337]])
 ```
 
 注意，如果嵌入已经归一化，那么在截断后它们将不再归一化，因此你**可能需要重新归一化**。
