--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -1392,6 +1392,58 @@ Gemini 2.5 Pro的上下文窗口是1M tokens，并且支持原生多模态：可
   + length prompts：let's use less than k tokens
   + routing by difficulty：训一个小模型，决定简单问题不思考，困难问题再思考
 
+# GRM+SPCT
+
+[刚刚，DeepSeek公布推理时Scaling新论文，R2要来了？](https://mp.weixin.qq.com/s/TbPWc4ooFyf0it5pEaLRUA)
+
+[Inference-Time Scaling for Generalist Reward Modeling](https://arxiv.org/abs/2504.02495)
+
+critique：生成的文本评价，即评论
+
+## RM分类
+
+![](../assets/rm-patterns.png)
+
+RM可以进行如下分类：
+
++ reward生成范式：输入query和一些responses
+  + scalar：只输出reward值
+  + semi-scalar：生成critique和scalar
+  + generative：只输出critique
++ 打分范式：输入query和2个responses
+  + pointwise：输出每个response的得分
+  + pairwise：输出二者的相对得分
+
+几种常见RM：
+
++ Bradley-Terry，scalar + pointwise
++ PairRM：scalr + pairwise
++ CLoud：semi-scalr + pointwise
++ LLM-as-a-Judge：semi-scalr或者generative + pairwise
++ Pointwise GRM：generative + pointwise
+
+## SPCT
+
+核心：principle（准则）不再只是辅助性的输入，而是使模型能在生成过程中**主动生成**并**基于此生成对应的critique**
+
+Self-Principled Critique Tuning (SPCT)
+
+![](../assets/spct.png)
+
++ 训练（2阶段）：输入query+2个response
+  + RFT（rejective fine-tuning）：使GRM能够生成格式正确且适配多种输入类型的principle与critique
+    + 使用预训练的pointwise-GRM，采样得到N个priciple + response，和goundtruth比较(groundtruth对应的reward是不是比其他N-1个结果对应的reward高)，满足下面条件的扔了，剩下的构造成一个数据集
+      + 全对的就是too-easy的，扔掉；
+      + 错误的也扔掉
+    + 同时还有一定比例的hint sampling，即把groundtruth提前泄露到GRM的prompt里去，让模型倾向于去对齐groudtruth
+  + RL（rule-based online RL）：通过不断优化生成的准则和评论，进一步增强泛化型奖励生成能力。
+    + 也是用的GRPO，只有accuracy reward，没format reward，加大KL-penalty
++ 推理：输入query+2个response
+  + 并行采样出一堆的principles+critiques，即m条结果
+  + voting：
+    + 基于生成式reward：即每个里的response1的reward求和，同理response2的reward求和，得到1和2的总得分
+    + 基于meta RM：训练一个pointwise scalar RM，用二分类来判断principle+critique对不对(label和RFT的一样)。使用：对这m个结果打分，干掉质量差的（图中就是只保留了第1和第3个），然后对剩下的$$k_{meta}$$个去投票
+
 # 推理模型总结
 
 [从自我进化视角出发，全面解析LLM的推理能力技术演进路径](https://mp.weixin.qq.com/s/hkYW0c26eLEHE9WgIQxwHw)
