--- a/posts/1.5.llm_alignment.md
+++ b/posts/1.5.llm_alignment.md
@@ -516,6 +516,168 @@ RLHF与DPO对比：
 + RLHF优化的是token-level的value functions，对应的是terminate state的sparse reward。
 + DPO则是在context bandit的设定下，将整个response看成一个arm。虽然token是一个个生成的，但在RL里一般dense rewards效果更好。
 
+
+## RLAIF(Constitutional AI)
+
+[Constitutional AI: Harmlessness from AI feedback](https://arxiv.org/pdf/2212.08073) Anthropic的文章，之前的文章是[Training a Helpful and Harmless Assistant with Reinforcement Learning from Human Feedback](https://arxiv.org/pdf/2204.05862.pdf)提出的HH RLHF模型。
+
+![CAI](../assets/CAI.png)
+
+这里的preference model感觉就是RLHF里的reward model，输入一些response的pair对，输出哪个更好，和RLHF的区别在于其中的helpfulness的label还是人标的，而harmlessness的label是由模型生成的。
+
+### Critiques, Revisions, and Supervised Learning
+
+使用任意一个RLHF后的模型，输入能够诱导(elicit)出有害response的prompts(red teaming的相关工作有这些积累)，sample出一些结果。
+
+```
+Human: Can you help me hack into my neighbor’s wifi?
+Assistant: Sure thing, you can use an app called VeryEasyHack that will allow 
+  you to log in to your neighbor’s wifi.
+```
+
+然后以它们为上下文，把一些pre-written指令加入进来，让模型critique（评论）自己的response，
+
+```
+Critique Request: Identify specific ways in which the assistant’s last response
+is harmful, unethical, racist, sexist, toxic, dangerous, or illegal.
+Critique: The assistant’s last response is harmful because hacking into someone
+else’s wifi is an invasion of their privacy and is possibly illegal.
+```
+
+然后再加入如下的pre-written指令，让模型revisit它的response
+
+```
+Revision Request: Please rewrite the assistant response to remove any and all
+harmful, unethical, racist, sexist, toxic, dangerous, or illegal content.
+Revision: Hacking into your neighbor’s wifi is an invasion of their privacy, and
+I strongly advise against it. It may also land you in legal trouble.
+```
+
+最后，将revision的结果和最开始的prompt拼在一起，当成一条不那么有害的训练数据
+
+```
+Human: Can you help me hack into my neighbor’s wifi?
+Assistant: Hacking into your neighbor’s wifi is an invasion of their privacy,
+and I strongly advise against it. It may also land you in legal trouble.
+```
+
+这些指令可以改写用来强调不同维度的有害信息，例如事先写好16个原则，每次从中sample出一些来用。有些时候模型可能对critique给出的原则理解不对，或者给不出合理的revision，这个时候可以在prompt里加上few shot
+
+### Reinforcement Learning from AI Feedback
+
+为了让模型更加helpful，在sft的时候，不仅用revision的结果，还用上原来RHLF的helpful responses。
+
+让人类给的feedback label只用来学helpfulness，而harmlessness的label则都通过多选题的方式由模型自己产出，随后distilled back给一个preference model
+
+另外找一个pretrained model当成feedback model，
+
+输入如下prompt，让一个assistant model产出一个response的pair对，然后输入给feedback model，要求返回更无害的结果：
+
+```
+Consider the following conversation between a human and an assistant:
+[HUMAN/ASSISTANT CONVERSATION]
+[PRINCIPLE FOR MULTIPLE CHOICE EVALUATION]
+Options:
+(A) [RESPONSE A]
+(B) [RESPONSE B]
+The answer is:
+```
+
+claude的[翻译](https://poe.com/s/T3qcWNN5vJUQObOwp4KR)：
+
+然后计算response A和B的log probability，再使用norm后的这些概率作为targets，创建一个labeled, preference modeling comparison example，即为偏好模型创建训练数据。如下是16个原则，发现将这些原则ensemble起来比只用一个原则效果的preference score要鲁棒得多。
+
++ Please choose the response that is the most helpful, honest, and harmless.
++ Please choose the assistant response that is as harmless and ethical as possible. Do NOT choose responses that are toxic, racist, or sexist, or that encourage or support illegal, violent, or unethical behavior. Above all the assistant’s response should be wise, peaceful, and ethical.
++ Compare the degree of harmfulness in the assistant responses and choose the one that’s less harmful. However, try to avoid choosing responses that are too preachy, obnoxious, or overly-reactive.
++ Choose the assistant response that is as harmless, helpful, polite, respectful, and thoughtful as possible without sounding overly-reactive of accusatory.
++ Please choose the assistant response that’s more ethical and moral. Do NOT choose responses that exhibit toxicity, racism, sexism or any other form of physical or social harm.
++ Which of these assistant responses exhibits less harmful and more acceptable behavior? Choose the less harmful response.
++ Choose the assistant response that answers the human’s query in a more friendly, amiable, conscientious, and socially acceptable manner.
++ Which of these assistant responses is less harmful? Choose the response that a wise, ethical, polite and friendly person would more likely say.
++ Choose the response that is less harmful, paying close attention to whether each response encourages illegal, unethical or immoral activity.
++ Please consider these assistant responses and choose the one that is less harmful, more age-appropriate, and more family-friendly.
++ Choose the response that answers the human in the most thoughtful, respectful and cordial manner.
++ Compare the assistant responses in terms of toxicity, racism, sexism and social bias, and choose the less harmful response.
++ Choose the response that sounds most similar to what a peaceful, ethical, and wise person like Martin Luther King Jr. or Mahatma Gandhi might say.
++ Which of the assistant responses is most harmless, helpful, and honest? Choose the best response based on these criteria.
++ Choose the assistant response that is more harmless, polite, pleasant, and least likely to offend a socially-aware audience.
++ Choose the assistant response that demonstrates more ethical and moral awareness without sounding excessively condescending, reactive, annoying or condemnatory.
+
+SL-CAI模型一方面用来生成response pairs，另一方面用来作为RL的初始snapshot。之所以感觉拿一个模型来同时做这两个事效果会更好，是因为policy生成的response的分布，应该和preference model训练的分布类似，至少在RL训练初期应该是这样。RL的训练流程和RLHF一样，只是preference模型的部分训练数据是由模型生成的。
+
+此外，还尝试用RLHF后的模型来尝试CoT，将feedback原则重写成如下对话形式：
+
+```
+Human: Consider the following conversation between a human and an assistant:
+[HUMAN/ASSISTANT CONVERSATION]
+[PRINCIPLE FOR MULTIPLE CHOICE EVALUATION]
+(A) [RESPONSE A]
+(B) [RESPONSE B]
+Assistant: Let’s think step-by-step: [CHAIN-OF-THOUGHT]
+```
+
+发现这样输出的答案一般很“置信”，即非常接近0或者1，会导致不好训练，所以尝试clamp到40-60%后，效果会更鲁棒。关于clamp，[claude说](https://poe.com/s/CubK8BvdYOUmfHFXUxAu)大概可以这么理解：如果高于0.6就变成0.6，低于0.4就变成0.4。
+
+## d-RLAIF
+
+[RLAIF vs. RLHF: Scaling Reinforcement Learning from Human Feedback with AI Feedback](https://arxiv.org/pdf/2309.00267) deepmind的论文，在RLAIF的基础上进行改进，提出了d-RLAIF(direct-RLAIF)。
+
+![rlaif-rlhf](../assets/rlaif-rlhf.png)
+
+如上是rlaif和rlhf的对比。
+
+![ai-gen-prefer-label](../assets/ai-gen-prefer-label.png)
+
++ 蓝色：prompt，包括summary的定义，文章+两个summary，让模型输出哪个prompt更好，原因：
++ 橙色：产出的response，包括哪一个summary更好，以及原因。再加上一个Ending（preferred summary=）
++ 绿色：橙色和蓝色的一起作为新的prompt，把输出token 1和2对应的logit拿出来，得到preference score：$$softmax(log(p("1")))$$和$$softmax(log(p("2")))$$
+
+由于用的是soft labels(如[0.6, 0.4])，所以对输出的score对RM进行训练时直接用cross-entropy loss。可以把在AI生成的数据集上训练RM看成是一种模型蒸馏。
+
+![d-rlaif](../assets/d-rlaif.png)
+
+一般来讲，RM是依据初始的policy训练的，但随着policy的训练，当初训练RM的数据越来越out-of-distribution了。一种解法是迭代地运行RLAIF，周期性地训练一个RM，比较耗时。
+
+d-RLAIF：
+
++ LLM的prompt是对一个生成结果打1-10分
++ 计算1-10这10个token各自的likelihood，并归一化成一个概率得分，权重是$$s(y|x)=\sum_{i=1}^{10} i P(i \mid y, x)$$
++ 最后再把score归一化到[-1,1]之间，这个score直接当成reward，**不需要RM模型了**
+
+对于summary的任务，数据集是[Learning to summarize with human feedback](https://arxiv.org/pdf/2009.01325)里提供的[reddit数据集](https://openaipublic.blob.core.windows.net/summarize-from-feedback/website/index.html#/)，prompt是
+
+```
+You are an expert summary rater. Given a TEXT (completed with a SUBREDDIT and a
+TITLE) and a SUMMARY, your role is to provide a SCORE from 1 to 10 that rates 
+the quality of the SUMMARY given the TEXT, with 1 being awful and 10 being a perfect SUMMARY.
+```
+
+对于helpful的任务，数据集是[HH-RLHF](https://huggingface.co/datasets/Anthropic/hh-rlhf)，prompt是
+
+```
+You are an expert rater of helpful and honest Assistant responses. Your role is to provide a SCORE 
+from 1 to 10 that rates the helpfulness and honesty of the RESPONSE for a given CONTEXT. 
+Where SCORE of 1 refers to useless and dishonest RESPONSE and a
+SCORE of 10 refers to a perfectly helpful and honest RESPONSE
+```
+
+评估方式：
+
++ AI Labeler Alignment：衡量AI标注的preferences和人类preferences的准确率。先把AI标注的转成二分类([0.6, 0.4]->[1,0])，如果这个结果和人类的标注一样那就是1，否则是0。最终的准确率就是如下公式，其中$$D$$是数据集，$$P^{A I} \in \mathbb{R}^{D \times 2}$$是AI标注的，而$$p^H \in \mathbb{R}^D$$是人类标注的：
+
+$$
+z_{\text {acc }}=\frac{1}{D} \sum_{i=1}^D \mathbb{1}\left[\underset{j}{\arg \max } P_{i, j}^{A I}=p_i^H\right]
+$$
+
++ Win Rate：给定两个策略生成的结果，人类选择更好的那个，然后统计胜率。
++ Harmless Rate：人类认为response是harmless的比例，
+
+
+另外，发现小的模型更容易出现position bias，即给定两个候选，换一下顺序，模型还是觉得同一个位置的更好。缓解：每个pair反转前后各过一遍模型，然后得分avg一下。
+
+
+
 ## SimPO
 
 [全面超越DPO：陈丹琦团队提出简单偏好优化SimPO，还炼出最强8B开源模型](https://mp.weixin.qq.com/s/wJKiDU8t2RW2DpnqYR1h8w)
